--- a/Makefile.toml
+++ b/Makefile.toml
@@ -6,7 +6,7 @@ if eq ${os} windows
   set_env DIST_PYTHON "${WORKSPACE}\\py39-dist\\python"
   set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-win_amd64.whl
-  set_env BUILD_TRIPLET="x86_64-pc-windows-msvc"
+  set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
 elseif eq ${os} linux
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
