--- a/Makefile.toml
+++ b/Makefile.toml
@@ -275,20 +275,20 @@ hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'sw
 
 [tasks.qml-format]
 env = { QT_APP = { script = [
-  "conda run -n console_pp python utils/echo-qt-dir.py",
+  "conda run -n $CONDA_ENV python utils/echo-qt-dir.py",
 ] } }
 script_runner = "@shell"
 script = '''
-C:/Users/kekyziva/Miniconda3/envs/console_pp/lib/site-packages/qt5_applications/Qt/bin/qmlformat -i $QML_FILES
+${QT_APP}/Qt/bin/qmlformat -i $QML_FILES
 '''
 
 [tasks.qml-lint]
 env = { QT_APP = { script = [
-  "conda run -n console_pp python utils/echo-qt-dir.py",
+  "conda run -n $CONDA_ENV python utils/echo-qt-dir.py",
 ] } }
 script_runner = "@shell"
 script = '''
-C:/Users/kekyziva/Miniconda3/envs/console_pp/lib/site-packages/qt5_applications/Qt/bin/qmllint -I C:/Users/kekyziva/Miniconda3/envs/console_pp/lib/site-packages/qt5_applications/../PySide2/Qt/qml/ -I resources/ $QML_FILES
+${QT_APP}/Qt/bin/qmllint -I ${QT_APP}/../PySide2/Qt/qml/ -I resources/ $QML_FILES
 '''
 
 [tasks.qml-format-check]
