--- a/Makefile.toml
+++ b/Makefile.toml
@@ -224,6 +224,7 @@ script_runner = "@duckscript"
 script = '''
 cm_run_task generate-resources
 cm_run_task copy-capnp
+cm_run_task store-version
 if is_path_exists py39-dist
   rm -r py39-dist
 end
