--- a/Makefile.toml
+++ b/Makefile.toml
@@ -2,12 +2,14 @@ env_scripts = ['''
 #!@duckscript
 os = os_family
 if eq ${os} windows
+  set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.6-x86_64-pc-windows-msvc-shared-pgo-20210724T1424.tar.zst"
   set_env PYTHON "${WORKSPACE}\\py39\\python.exe"
   set_env DIST_PYTHON "${WORKSPACE}\\py39-dist\\python"
   set_env PYSIDE2_RCC "${WORKSPACE}\\py39\\Lib\\site-packages\\PySide2\\rcc.exe"
   set_env BACKEND_WHEEL console_backend-0.1.0-cp39-cp39-win_amd64.whl
   set_env BUILD_TRIPLET "x86_64-pc-windows-msvc"
 elseif eq ${os} linux
+  set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.6-x86_64-unknown-linux-gnu-lto-20210724T1424.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
@@ -15,6 +17,7 @@ elseif eq ${os} linux
   output = exec --fail-on-error gcc -dumpmachine
   set_env BUILD_TRIPLET ${output.stdout}
 else
+  set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.6-x86_64-apple-darwin-lto-20210724T1424.tar.zst"
   set_env PYTHON "${WORKSPACE}/py39/bin/python3"
   set_env DIST_PYTHON "${WORKSPACE}/py39-dist/bin/python3"
   set_env PYSIDE2_RCC "${WORKSPACE}/py39/bin/pyside2-rcc"
@@ -33,6 +36,7 @@ skip_crate_env_info = true
 
 [env]
 WORKSPACE = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
+STANDALONE_PY_BASE_URL = "https://github.com/indygreg/python-build-standalone/releases/download/20210724"
 
 [tasks.init]
 
@@ -204,7 +208,12 @@ wget -O ./get-pip.py https://bootstrap.pypa.io/get-pip.py
 dependencies = ["get-get-pip"]
 cwd = "standalone-py"
 condition = { files_not_exist = ["${WORKSPACE}/standalone-py/python"] }
-script = { file = "download.sh" }
+script_runner = "@duckscript"
+script = '''
+wget -O py39.tar.zst ${STANDALONE_PY_URL}
+exec --fail-on-error zstd -f -d py39.tar.zst
+exec --fail-on-error tar -xvf py39.tar
+'''
 
 [tasks.get-standalone-py.windows]
 script_runner = "powershell"
