--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,5 +1,7 @@
-env_scripts = ['''
+env_scripts = [
+  '''
 #!@duckscript
+# set os specific env vars
 os = os_family
 if eq ${os} windows
   set_env STANDALONE_PY_URL "${STANDALONE_PY_BASE_URL}/cpython-3.9.6-x86_64-pc-windows-msvc-shared-pgo-20210724T1424.tar.zst"
@@ -25,7 +27,8 @@ else
   output = exec --fail-on-error gcc -dumpmachine
   set_env BUILD_TRIPLET ${output.stdout}
 end
-''']
+''',
+]
 
 [config]
 default_to_workspace = false
