--- a/Makefile.toml
+++ b/Makefile.toml
@@ -291,8 +291,9 @@ cwd = "py39-dist"
 script_runner = "@duckscript"
 script = '''
 py_folders = array test tests examples __pycache__ demos translations
-qt_folders = array plugins/virtualkeyboard lib/Tix8.4.3 tcl/tix8.4.3
-all_folders = array_concat ${py_folders} ${qt_folders}
+qt_folders = array plugins/virtualkeyboard plugins/sqldrivers lib/Tix8.4.3 tcl/tix8.4.3 Qt/resources PySide2/resources
+qml_folders = array qml/QtWeb* qml/QtBluetooth* qml/QtNfc* qml/QtGamepad qml/QtTest
+all_folders = array_concat ${py_folders} ${qt_folders} ${qml_folders}
 for name in ${all_folders}
     folders = glob_array **/${name}/
     for folder in ${folders}
@@ -308,9 +309,9 @@ for ext in ${file_exts}
     end
 end
 
-libs = array Qt5WebEngineCore Qt5Pdf Qt5Designer Qt5DesignerComponents
+libs = array Qt5WebEngineCore Qt5Pdf Qt5Designer Qt5DesignerComponents Qt5VirtualKeyboard
 for lib in ${libs}
-    files = glob_array ./**/*${lib}.*
+    files = glob_array ./**/*${lib}*
     for file in ${files}
         rm ${file}
     end
@@ -344,7 +345,7 @@ end
 exec --fail-on-error ${DIST_PYTHON} -m pip uninstall -y pip setuptools wheel
 exec --fail-on-error ${DIST_PYTHON} -m compileall -b -f -o 1 -o 2 .
 
-files = glob_array "*.py"
+files = glob_array ./**/*.py
 for file in ${files}
     rm ${file}
 end
