--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,5 +33,8 @@ requires = [
 ]
 build-backend = "flit_core.buildapi"
 
+[tool.flit.sdist]
+include = ["swiftnav_console/console_resources.py"]
+
 [tool.black]
 line-length = 120
