--- a/Makefile.toml
+++ b/Makefile.toml
@@ -131,6 +131,10 @@ args = [
   "${@}",
 ]
 
+[tasks.qml-run]
+dependencies = ["generate-resources"]
+run_task = "start-console"
+
 [tasks.run]
 dependencies = [
   "copy-capnp",
