--- a/Makefile.toml
+++ b/Makefile.toml
@@ -295,13 +295,14 @@ run_task = [
 cwd = "py39-dist"
 script_runner = "@duckscript"
 script = '''
-py_folders = array test tests examples __pycache__ demos translations
+py_folders = array test tests examples __pycache__ demos translations idlelib lib/tcl8 lib/tcl8.6 lib/tk8.6
 qt_folders = array plugins/virtualkeyboard plugins/sqldrivers lib/Tix8.4.3 tcl/tix8.4.3 Qt/resources PySide2/resources
-qml_folders = array qml/QtWeb* qml/QtBluetooth* qml/QtNfc* qml/QtGamepad qml/QtTest
+qml_folders = array qml/QtWeb* qml/QtBluetooth* qml/QtNfc* qml/QtGamepad qml/QtTest qml/QtQuick3D
 all_folders = array_concat ${py_folders} ${qt_folders} ${qml_folders}
 for name in ${all_folders}
     folders = glob_array **/${name}/
     for folder in ${folders}
+        echo ${folder}
         rm -r ${folder}
     end
 end
@@ -310,15 +311,17 @@ file_exts = array pyc pyi pdb tcl gif
 for ext in ${file_exts}
     files = glob_array **/*.${ext}
     for file in ${files}
+        echo ${file}
         rm ${file}
     end
 end
 
-libs = array Qt5WebEngineCore Qt5Pdf Qt5Designer Qt5DesignerComponents Qt5VirtualKeyboard
+libs = array Qt5Nfc Qt5Web QtWeb Qt5Pdf Qt5Designer Qt5DesignerComponents Qt5VirtualKeyboard Qt5Bluetooth Qt5Quick3D
 for lib in ${libs}
     files = glob_array ./**/*${lib}*
     for file in ${files}
-        rm ${file}
+        echo ${file}
+        rm -r ${file}
     end
 end
 
