Add new 'SwiftNav' style
* This creates a new Qt Quick Controls 2 style which I have named
  "SwiftNav". It is selected in the qtquickcontrols2.conf file,
  and is based on the Material style, with a fallback to the material
  style in cases where a control is not defined in the style.

* Initially I added a TabBar and TabButton control. The TabBar and
  TabButton controls are styled similar to what is desired in the new
  orange styling that SwiftNav folks desired.

* Note that there are a lot of changes in the colors of the TabButton
  elements from the old keithel-qt/orange-styling branch. This is to
  more closely blend in with the connection button on the bottom, and it
  looks nicer.

--- a/resources/qtquickcontrols2.conf
+++ b/resources/qtquickcontrols2.conf
@@ -1,8 +1,12 @@
 [Controls]
-Style=Material
+Style=SwiftNav
+FallbackStyle=Material
 
 [Material]
 Variant=Dense
+# Theme=Light
+# Accent=<Color like Teal>
+# Primary=<Color like BlueGrey>
 
 [Default]
 Font\Family=Roboto
