Quit if the QQmlApplicationEngine created no objects (#155)
* Quit if the QQmlApplicationEngine created no objects

* This terminates the application abnormally if the loading of the base
  view.qml failed to create any objects. This typically happens if there
  is a syntax error or if a module couldn't be imported.

* pylint fixes

Co-authored-by: Jason Mobarak <jason@swiftnav.com>

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -343,7 +343,7 @@ alias = "python-format-all"
 [tasks.python-lint]
 script_runner = "@shell"
 script = '''
-conda run -n $CONDA_ENV pylint --output-format=parseable $PYTHON_FILES
+conda run -n $CONDA_ENV pylint --extension-pkg-allow-list=console_backend --output-format=parseable $PYTHON_FILES
 '''
 
 [tasks.format-toml-check]
