--- a/Makefile.toml
+++ b/Makefile.toml
@@ -251,6 +251,10 @@ cd ../../..
 exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 '''
 
+[tasks.build-dist-build-entrypoint]
+command = "cargo"
+args = ["build", "--release", "--bin", "entrypoint"]
+
 [tasks.build-dist-install-frontend-wheel]
 dependencies = ["build-frontend-wheel"]
 command = "${DIST_PYTHON}"
@@ -271,6 +275,7 @@ args = ["-m", "pip", "install", "console_backend/dist/${BACKEND_WHEEL}"]
 script_runner = "@duckscript"
 script = '''
 cp src/main/resources py39-dist/
+cp target/release/entrypoint py39-dist/bin/swiftnav-console
 '''
 
 [tasks.build-dist-freeze]
@@ -279,26 +284,15 @@ script = '''
 touch ./py39-dist/.frozen
 '''
 
-[tasks.build-dist-fix-shebang]
-command = "./utils/fix_shebang.py"
-condition = { platforms = ["linux", "mac"] }
-args = [
-  "-s",
-  "#!/usr/bin/env sh\n\"exec\" \"`dirname $0`/python3\" \"$0\" \"$@\"",
-  "py39-dist/bin/swiftnav-console",
-  "-o",
-  "py39-dist/bin",
-]
-
 [tasks.build-dist]
 dependencies = ["prep-dist"]
 run_task = [
   { name = [
     "build-dist-install-frontend-wheel",
     "build-dist-install-backend-wheel",
+    "build-dist-build-entrypoint",
     "build-dist-copy-resources",
     "build-dist-freeze",
-    "build-dist-fix-shebang",
   ] },
 ]
 
